Clean up code for upgrades to v203.  Start in removal of old API usage.